--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <meta name="apple-mobile-web-app-title" content="Hello World">
   <meta name="msapplication-TileImage" content="images/shryke_168_2.jpg">
   <meta name="msapplication-TileColor" content="#FFFFFF">
+  <link rel="manifest" href="/manifest.json">
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
