--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <link rel="manifest" href="/manifest.json">
   <link rel="stylesheet" href="css/style.css">
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
-  <link rel="apple-touch-icon" href="images/shryke_168_2.jpg">
+  <link rel="apple-touch-icon" href="images/logo.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="white"/>
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="Hello World">
-  <meta name="msapplication-TileImage" content="images/shryke_168_2.jpg">
+  <meta name="msapplication-TileImage" content="images/logo.png">
   <meta name="msapplication-TileColor" content="#FFFFFF">
   <link rel="manifest" href="/manifest.json">
 
