--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
   <head> 
   <meta charset="utf-8">
   <title>Quinn's Disc</title>
-  <link rel="icon" href="favicon.ico" type="image/x-icon" />
-  <link rel="apple-touch-icon" href="images/logo.png">
+  <!-- <link rel="icon" href="favicon.ico" type="image/x-icon" /> -->
+  <!-- <link rel="apple-touch-icon" href="images/logo.png"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="white"/>
-  <meta name="apple-mobile-web-app-capable" content="yes">
+  <!-- <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="Hello World">
   <meta name="msapplication-TileImage" content="images/logo.png">
-  <meta name="msapplication-TileColor" content="#FFFFFF">
-  <link rel="manifest" href="/manifest.json">
+  <meta name="msapplication-TileColor" content="#FFFFFF"> -->
+  <!-- <link rel="manifest" href="/manifest.json"> -->
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -20,7 +20,8 @@
     <!-- Custom styles for this template -->
     <link href="./style/main.css" rel="stylesheet">
   </head>
-  <body onload="init()">
+  <!-- <body onload="init()"> -->
+  <body>
     <header>
   <div class="navbar navbar-dark bg-dark shadow-sm">
     <div class="container d-flex justify-content-between">
@@ -546,6 +547,6 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script>window.jQuery || document.write('<script src="/docs/4.3/assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
 <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-<script src="js/main.js"></script>
+<!-- <script src="js/main.js"></script> -->
 </body>
 </html>
